Fix recipe title wrapping behavior

--- a/src/styles.css
+++ b/src/styles.css
@@ -120,6 +120,7 @@ main {
 .recipe-image {
   width: 100%;
   height: 75%;
+  background-size: cover;
 }
 
 .article-title {
@@ -136,6 +137,7 @@ main {
   word-wrap: break-word;
   height: 100%;
   width: 100%;
+  white-space: normal;
 }
 
 .hidden {
